css/style.css
.preload {
  display: none !important;
}

.loader {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: 1000;
  background-color: #333;
  text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
}

.loader > .spinner-logo {
  width: 200px;
  height: 200px;
  display: block;
  margin: 0 auto;
  position: relative;
  top: 75px;
}

.loader > .spinner {
  display: block;
  position: relative;
  left: 50%;
  top: 50%;
  width: 300px;
  height: 300px;
  animation: spin 2s linear infinite;
  -webkit-animation: spin 2s linear infinite;
  -moz-animation: spin 2s linear infinite;
  margin: -150px 0 0 -150px;
  border-radius: 50%;
  border: 3px solid transparent;
  border-top-color: #3498db;
}

.loader > .spinner:before {
  content: "";
  position: absolute;
  top: 5px;
  left: 5px;
  right: 5px;
  bottom: 5px;
  border-radius: 50%;
  border: 3px solid transparent;
  border-top-color: #e74c3c;
  animation: spin 3s linear infinite;
  -webkit-animation: spin 3s linear infinite;
  -moz-animation: spin 3s linear infinite;
}

.loader > .spinner:after {
  content: "";
  position: absolute;
  top: 15px;
  left: 15px;
  right: 15px;
  bottom: 15px;
  border-radius: 50%;
  border: 3px solid transparent;
  border-top-color: #f9c922;
  animation: spin 1.5s linear infinite;
  -webkit-animation: spin 1.5s linear infinite;
  -moz-animation: spin 1.5s linear infinite;
}

@-moz-keyframes spin {
  from {
    -moz-transform: rotate(0deg);
  }
  to {
    -moz-transform: rotate(360deg);
  }
}
@-webkit-keyframes spin {
  from {
    -webkit-transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
  }
}
@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.no-overflow {
  overflow: hidden;
}

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: 1px solid #fff;
}

.nav-icon-scroll > i {
  animation: flash 3s ease-in-out infinite;
  font-size: 3rem;
}

/*
 * Base structure
 */

html,
body {
  height: 100%;
  background-color: #333;
}
body {
  color: #fff;
  text-align: center;
  text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
}
.site-wrapper-inner {
  display: flex;
  justify-content: center;
  width: 100%;
  min-height: 100vh;
  position: relative;
}
.cover-container {
  margin-right: auto;
  margin-left: auto;
  width: 100%;
}

/* Padding for spacing */
.inner {
  padding: 30px;
}


/*
 * Header
 */
.masthead-brand {
  margin-top: 10px;
  margin-bottom: 10px;
  color: #fff;
}

.masthead-brand > img {
  height: 50px;
}

.masthead-nav > li {
  display: inline-block;
}
.masthead-nav > li + li {
  margin-left: 20px;
}
.masthead-nav > li > a {
  padding-right: 0;
  padding-left: 0;
  font-size: 16px;
  font-weight: bold;
  color: #fff; /* IE8 proofing */
  color: rgba(255,255,255,.75);
  border-bottom: 2px solid transparent;
}
.masthead-nav > li > a:hover,
.masthead-nav > li > a:focus {
  background-color: transparent;
  border-bottom-color: #a9a9a9;
  border-bottom-color: rgba(255, 255, 255, .25);
}
.masthead-nav > .active > a,
.masthead-nav > .active > a:hover,
.masthead-nav > .active > a:focus {
  color: #fff;
  border-bottom-color: #fff;
}

@media (min-width: 768px) {
  .masthead-brand {
    float: left;
  }
  .masthead-nav {
    float: right;
  }
}


/*
 * Cover
 */

.cover {
  padding: 0 20px;
}
.cover .btn-lg {
  padding: 10px 20px;
  font-weight: bold;
}
.cover-heading {
  color: #fff;
}


/*
 * Footer
 */

.mastfoot {
  color: #999; /* IE8 proofing */
  color: rgba(255, 255, 255, .5);
}


#about-wrapper {
  background-color: #fff;
  color: #333;
  text-shadow: 0 1px 3px rgba(200,200,200,.5);
}

#about-wrapper a,
#about-wrapper a:focus,
#about-wrapper a:hover {
  color: #333;
}

#about-wrapper .btn-default,
#about-wrapper .btn-default:hover,
#about-wrapper .btn-default:focus {
  color: #fff;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #333;
  border: 1px solid #333;
}

#about-wrapper .masthead-nav > li > a:hover,
#about-wrapper .masthead-nav > li > a:focus {
  background-color: transparent;
  border-bottom-color: #a9a9a9;
  border-bottom-color: rgba(0, 0, 0, .25);
}
#about-wrapper .masthead-nav > .active > a,
#about-wrapper .masthead-nav > .active > a:hover,
#about-wrapper .masthead-nav > .active > a:focus {
  color: #333;
  border-bottom-color: #333;
}

#about-wrapper .masthead-brand {
  color: #333;
}
#about-wrapper .cover-heading {
  color: #333;
}

#map {
  margin-bottom: 18px;
  height: 150px;
  width: 100%;
}

textarea:focus,
textarea.form-control:focus,
input.form-control:focus,
input[type=text]:focus,
input[type=password]:focus,
input[type=email]:focus,
input[type=number]:focus,
[type=text].form-control:focus,
[type=password].form-control:focus,
[type=email].form-control:focus,
[type=tel].form-control:focus,
[contenteditable].form-control:focus {
    -webkit-box-shadow: inset 0 -2px 0 #fff;
	-moz-box-shadow: inset 0 -2px 0 #fff;
    box-shadow: inset 0 -2px 0 #fff;
	border-color: transparent;
}

/*
 * Affix and center
 */

@media (min-width: 768px) {
  /* Pull out the header and footer */
  .masthead {
    position: absolute;
    top: 0;
  }
  .mastfoot {
    position: absolute;
    bottom: 0;
  }
  /* Start the vertical centering */
  .site-wrapper-inner {
    align-items: center;
  }
  /* Handle the widths */
  .masthead,
  .mastfoot,
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
  
  #map {
	height: 200px;
	margin-bottom: 0;
  }
}

@media (min-width: 992px) {
  .masthead,
  .mastfoot,
  .cover-container {
    width: 700px;
  }
}

@media (max-width: 768px) {
  .masthead-brand > img {
    display: block;
	margin: 0 auto;
  }
  
  #home-wrapper .masthead-brand > img {
    height: auto;
  }
}

